【edit】雪榕中文翻译

--- a/superset/translations/zh/LC_MESSAGES/messages.json
+++ b/superset/translations/zh/LC_MESSAGES/messages.json
@@ -1301,6 +1301,9 @@
       "Download": ["下载"],
       "Apply filters": ["应用"],
       "Total (Sum)": ["总计"],
+      "total": ["总计"],
+      "Total (%(aggregatorName)s)": ["总计(%(aggregatorName)s)"],
+      "Sum": ["累加"],
       "metric": ["标题栏"],
       "Subtotal": ["小计"],
       "No results were returned for this query": ["过滤后没有数据，或者最新记录的数据为空值"],
