【edit】中文“清楚”改为“清除”

--- a/superset/translations/zh/LC_MESSAGES/messages.json
+++ b/superset/translations/zh/LC_MESSAGES/messages.json
@@ -823,7 +823,7 @@
       ],
       "Clause": ["从句"],
       "Clear": ["清除"],
-      "Clear all": ["清楚所有"],
+      "Clear all": ["清除所有"],
       "Click the lock to make changes.": ["单击锁以进行更改。"],
       "Click the lock to prevent further changes.": [
         "单击锁定以防止进一步更改。"
